Fix width issue on mobile

--- a/src/patternlibrary/scss/components/FooterV2.scss
+++ b/src/patternlibrary/scss/components/FooterV2.scss
@@ -70,7 +70,7 @@ $fixed-email-height: 150px;
       height: $fixed-email-height;
 
       .ftr-contact-email-content {
-        width: 320px;
+        width: 260px;
         margin: auto;
 
         a {
